Correct contrast error

--- a/css/styles.css
+++ b/css/styles.css
@@ -73,3 +73,10 @@ footer {
     padding: 10px;
     font-family: Arial, sans-serif;
 }
+
+.Bottomlink a {
+    color: rgb(255, 225, 0);
+    text-decoration: none;
+    padding: 10px 15px;
+    font-family: Arial, sans-serif; 
+}
